cmake_minimum_required(VERSION 3.11)
project(moderncpp_exercise)

if (NOT "${CMAKE_CXX_STANDARD}")
    set(CMAKE_CXX_STANDARD 14)
endif()

if (NOT "${CMAKE_BUILD_TYPE}")
    set(CMAKE_BUILD_TYPE Release)
endif()

function(RemoveIllegalCharacters in out)
    string(REGEX REPLACE "[ \t\r\n]" "_" _temp "${in}")
    string(REGEX REPLACE "[/\\]" "_" _temp "${_temp}")
    string(REGEX REPLACE "[\(\)]" "_" _temp "${_temp}")
    string(REGEX REPLACE "[\.,]" "_" _temp "${_temp}")
    set(${out} "${_temp}" PARENT_SCOPE)
endfunction()

function(CreateTargets dir ext)
    file(GLOB_RECURSE files RELATIVE "${CMAKE_CURRENT_LIST_DIR}" "${dir}/*.${ext}")
    foreach(file ${files})
        RemoveIllegalCharacters("${file}" name)
        add_executable(${name} "${file}")
    endforeach()
endfunction()

include(CheckCXXCompilerFlag)
macro(SetCXXFlags value)
    check_cxx_compiler_flag(${value} _out)
    if ("${_out}")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${value}")
    endif ()
endmacro()

if (MSVC)
    SetCXXFlags("/permissive-")
    SetCXXFlags("/Zc:__cplusplus")
    SetCXXFlags("/Zc:ternary")
endif()

CreateTargets("${CMAKE_CURRENT_LIST_DIR}/submission" "cc")
CreateTargets("${CMAKE_CURRENT_LIST_DIR}/submission" "cpp")
CreateTargets("${CMAKE_CURRENT_LIST_DIR}/submission" "c++")
CreateTargets("${CMAKE_CURRENT_LIST_DIR}/submission" "cp")
CreateTargets("${CMAKE_CURRENT_LIST_DIR}/submission" "cxx")
